# ingrid-py

./: Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml  tests.yml
python/ingrid_py/: __init__.py  __init__.pyi  ingrid_py.pyi
src/: fill.rs  grid.rs  lib.rs  word_list.rs
tests/: conftest.py  test_fill_helper.py  test_find_fill.py  test_grid_config.py  test_large_grids.py  test_slot_options.py  test_statistics.py  test_word_list.py
