[project]
name = "ingrid-py"
readme = { "file" = "README.md", "content-type" = "text/markdown" }
requires-python = ">=3.11,<3.14"
license-files = ["LICENSE"]
classifiers = [
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
]
dynamic = ["version"]

[dependency-groups]
dev = [
  "maturin>=1.13.3",
  "pytest>=9.0.3",
  "ruff>=0.15.13",
]

[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[tool.maturin]
exclude = ["tests/*", "tests"]
module-name = "ingrid_py.ingrid_py"
# Python source lives in python/, the .so goes inside the ingrid_py package.
python-source = "python"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
